--- a/FSDC/Web.config
+++ b/FSDC/Web.config
@@ -73,7 +73,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="FSDCEntities" connectionString="metadata=res://*/Models.FSDCEntityModel.csdl|res://*/Models.FSDCEntityModel.ssdl|res://*/Models.FSDCEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=9YGMY52\SQLEXPRESS;initial catalog=FSDC;user id=sa;password=ccube@31;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FSDCEntities" connectionString="metadata=res://*/Models.FSDCEntityModel.csdl|res://*/Models.FSDCEntityModel.ssdl|res://*/Models.FSDCEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=YOUR SERVER;initial catalog=FSDC;user id=sa;password=YOUR PASSWORD;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
